Closed Bug 1410043 Opened 8 years ago Closed 8 years ago

Intermittent dom/media/webaudio/test/test_WebAudioMemoryReporting.html | Assertion failure: OnGraphThreadOrNotRunning(), at /builds/worker/workspace/build/src/dom/media/MediaStreamGraph.h:1372

Categories

(Core :: Audio/Video: MediaStreamGraph, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- unaffected
firefox57 --- unaffected
firefox58 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: karlt)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Assignee: nobody → karlt
Blocks: 1406831
Status: NEW → ASSIGNED
Component: Web Audio → Audio/Video: MediaStreamGraph
Summary: Intermittent dom/media/webaudio/test/test_WebAudioMemoryReporting.html | application crashed [@ linux-gate.so + 0x440] → Intermittent dom/media/webaudio/test/test_WebAudioMemoryReporting.html | Assertion failure: OnGraphThreadOrNotRunning(), at /builds/worker/workspace/build/src/dom/media/MediaStreamGraph.h:1372
Comment on attachment 8920468 [details] bug 1410043 remove over-zealous graph-thread assert in SetCurrentDriver() https://reviewboard.mozilla.org/r/191472/#review196776
Attachment #8920468 - Flags: review?(apehrson) → review+
Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b6101f641ea7 remove over-zealous graph-thread assert in SetCurrentDriver() r=pehrsons
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: